// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders active line 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "borderColor": "rgba(0, 0, 255, 1)",
      "borderStyle": "solid",
      "borderWidth": 2,
      "bottom": 0,
      "left": -3,
      "position": "absolute",
      "right": -3,
      "top": -4,
    }
  }
/>
`;

exports[`renders disabled line 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "borderColor": "black",
      "borderStyle": "dotted",
      "borderWidth": 1,
      "bottom": 0,
      "left": -1.5,
      "position": "absolute",
      "right": -1.5,
      "top": -2,
    }
  }
/>
`;

exports[`renders line 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "borderColor": "rgba(0, 0, 0, 1)",
      "borderStyle": "solid",
      "borderWidth": 0.5,
      "bottom": 0,
      "left": -0.75,
      "position": "absolute",
      "right": -0.75,
      "top": -1,
    }
  }
/>
`;

exports[`renders restricted line 1`] = `
<View
  pointerEvents="none"
  style={
    Object {
      "borderColor": "red",
      "borderStyle": "solid",
      "borderWidth": 2,
      "bottom": 0,
      "left": -3,
      "position": "absolute",
      "right": -3,
      "top": -4,
    }
  }
/>
`;
